<u>Version 1.52 Final  (2016-09-12)</u>
- fixing static methods (goffy/mamba)

<u>Version 1.51 Final  (2016-08-28)</u>
- code cosmetics (mamba)
- removed @version (mamba)
- addNavigation(basename(__FILE__))  (mamba)
- dirname(__FILE__) to __DIR__ (mamba)
- XOOPS 2.5.8, PHP 7 (mamba)
- replaced < b /> with < b > (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- Hardening to type safe (mamba)
- update Help (mamba)

<u>Version 1.51 RC 3  (2015-02-27)</u>
- reverting  "throw new Exception" for XOOPS_ROOT_PATH check (zyspec/mamba)

<u>Version 1.51 RC 2  (2015-02-27)</u>
- added check for empty $options[5] element (mamba)
- more PSR-2 updates (mamba)
- added requirement for XOOPS 2.5.7.1

<u>Version 1.51 RC 1  (2015-02-24)</u>
- adjusted Help files (mamba)
- PSR-2 updates (mamba)
- using XooopsRequest (mamba)
- replaced exit() with Exceptions (mamba)

<u>Version 1.51 Beta 3  (2015-02-23)</u>
- TODO: use Xmf libraries
- TODO: reintroduce hooks ...
- TODO: create infinite levels menu
- TODO: inline edit link vars
- fixed bug in update procedure (luciorota)
- added treemenu (LioMJ)
- standardize module to latest code style standards (luciorota)
- merged @zyspec and @luciorota code (luciorota)

<u>Version 1.51 Beta 2  (2015-02-19)</u>
- change to use XOOPS jquery js from Frameworks (zyspec)
- cleaned up skins directories to use common structure (/css, /images) (zyspec)
- fixed bug in rendering menucss in block (zyspec)
- added tw_red skin, inadvertently removed in previous release (zyspec)
- added mid KEY for SQL to improve performance for common queries (zyspec)
- normalized icons16 & icons32 definitions similar to other XOOPS modules (zyspec)
- more code cleanup (zyspec)

<u>Version 1.51 Beta 1  (2015-01-20)</u>
- fixed bug where editing menu item put item in 1st menu (zyspec)
- fixed reference to JS files since moved to /assets (zyspec)
- fixed/improve menu HTML rendering so it can validate (zyspec)