@@ -1,3 +1,6 @@
+<u>Version 1.53 Beta 1  (NOT RELEASED)</u>
+- set $newmenus as array() (mamba)
+
 <u>Version 1.52 Final  (2016-09-12)</u>
 - fixing static methods (goffy/mamba)
 
